fix(java): restore Java 17 thread compatibility